--- a/style.css
+++ b/style.css
@@ -1,24 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
-
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* desktop */
+
 body{
     font-family: 'Roboto Mono', monospace;
-    background-color: #f5f5f5;
+    background-color: #04091A;
 }
 
 main{
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #04091A;
 }
 
 header{
@@ -34,11 +29,10 @@ header{
 
 header .logo_arz{
     color: #ffffff;
-    text-transform: uppercase;
     cursor: pointer;
-    transition: 0.6s;
     width: 140px;
     height: 50px;
+    transition: 0.6s;
 }
 
 header ul{
@@ -59,171 +53,20 @@ header ul li a{
     font-size: 1.5em;
     font-weight: 400;
     letter-spacing: 3px;
-    transition: 0.6s;
 }
 
-header .material-symbols-outlined {
+header .material-symbols-outlined{
     color: #ffffff;
     font-size: 60px;
     transition: 0.6s;
     display: none;
 }
 
+
 header ul li a:hover{
     color: #27cdff;
-}
-
-.banner{
-    display: grid;
-    grid-row: 1fr;
-    grid-template-columns: 1fr;
-    place-items: center;
-    background-size: cover;
-    height: 100vh;
-    width: 100%;
-}
-.circle{
-    margin-top: 150px;
-    width: 700px;
-    height: 700px;
-    border-radius: 50%;
-    background-color: #3935D2;
-    opacity: 0.5;
-    filter: blur(100px);
-    grid-area: 1/1;
-    transition: 0.6s;
-}
-
-.main_grid{
-    width: 50%;
-    height: minmax(500px, auto);
-    object-fit: cover;
-    grid-area: 1/1;
-    transition: 0.6s;
-}
-
-.banner p{
-    color: #ffffff;
-    font-size: 5em;
-    font-weight: lighter;
-    text-align: center;
-    grid-area: 1/1;
-    transition: 0.6s;
-}
-
-.main_text_top{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    margin-top: 175px;
-    transition: 0.6s;
-}
-
-.main_text_top b{
-    font-weight: bold;
-    color: #27cdff;
-}
-
-.competences{
-    padding-top: 250px;
-    padding-left: 200px;
-    padding-right: 200px;
-    padding-bottom: 600px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 100px 1fr;
-    align-items: center;
-    justify-content: center;
-    transition: 0.6s;
-}
-
-.competences .competence{
-    background-color: #1E243A;
-    height: 610px;
-    width: 80%;
-    border-radius: 50px;
-    margin: 0 auto;
-    box-shadow: 0 0 1000px #242188;
-}
-
-.competences h1{
-    color: #ffffff;
-    font-size: 3em;
-    font-weight:bold;
-    grid-column: span 3;
-    text-align: center;
-}
-
-.competences .competence h1{
-    font-size: 2em;
-    padding-top: 60px;
-    padding-left: 60px;
-    text-align: left;
-}
-.competence p{
-    padding-top: 50px;
-    padding-left: 70px;
-    color: #ffffff;
-    font-size: 1.3em;
-    width: 70%;
-    font-weight: 300;
-    text-align: left;
-}
-
-footer{
-    width: 100%;
-    height: 100px;
-    padding: 20px;
-    background-color: #f5f5f5;
-    display: grid;    
-    justify-content: center;
-    grid-template-columns: minmax(400px, 600px) minmax(400px, 600px);
-    grid-template-rows: 1fr 1fr 1fr;
-    transition: 0.6s;
-}
-
-footer .logo_arz{
-    transition: 0.6s;
-    width: 140px;
-    height: 50px;
-    grid-column: span 2;
-    filter: brightness(0);
-    margin: 0 auto;
-    margin-bottom: 50px;
-}
-
-footer button {
-    font-family: 'Roboto Mono', monospace;
-    font-weight: 600;
-    background-color: #3935E8;
-    color: #ffffff;
-    font-size: 1.5em;
-    font-weight: 300;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    width: 200px;
-    height: 60px;
-    transition: 0.6s;
-    margin: 0 auto;
-    box-shadow: 0 0 25px #1bc8fd;
-}
-
-footer .bottom_contact{
-    height: 400px;
-    font-size: 1.5em;
-    margin: 0 auto;
-}
-
-footer .cc{
-    margin: 0 auto;
-    grid-column: span 2;
-}
-
-footer button:hover{
-    background-color: #27cdff;
+    transition: 0.5s;
+    filter: drop-shadow(0 0 0.75rem #27cdff);
 }
 
 header.sticky{
@@ -238,278 +81,89 @@ header.sticky .logo_arz{
 header.sticky ul li a{
     color: #000000;
 }
-@media screen and (max-width: 1920px){ /*grand écran*/
-    .banner p{
-        font-size: 3.5em;
-    }
 
-    .main_text_top{
-        margin-top: 150px;
-    }
-
-    .circle{
-        margin-top: 125px;
-        width: 600px;
-        height: 600px;
-        filter: blur(300px);
-    }
-
-    .competences{
-        padding-top: 200px;
-        padding-left: 100px;
-        padding-right: 100px;
-        padding-bottom: 500px;
-    }
-    
-    .competences h1{
-        font-size: 2.5em;
-    }
-
-    .competences .competence{
-        height: 40vh;
-        width: 80%;
-        transition: 0.6s;
-    }
-
-    .competence p{
-        font-size: 1em;
-    }
-
-    footer .logo_arz{
-        width: 120px;
-        height: 40px;
-    }
-
-    footer button{
-        font-size: 1.3em;
-        width: 180px;
-        height: 50px;
-    }
-
-    footer .bottom_contact{
-        font-size: 1.3em;
-    }
-
-    footer .cc{
-        font-size: 1.3em;
-    }
-
-    header{
-        padding: 30px 100px;
-    }
-
-    header.sticky{
-        padding: 20px 100px;
-    }
-
-    header .logo_arz{
-        width: 120px;
-        height: 40px;
-    }
-
-    header ul li a{
-        font-size: 1.3em;
-    }
-
-    header ul li{
-        margin: 0 5px;
-    }
-
-    header ul{
-        gap: 10px;
-    }
+header.sticky .material-symbols-outlined{
+    color: #000000;
 }
 
-@media screen and (max-width: 1280px){ /*tablette*/
-    header{
-        padding: 20px 50px;
-    }
-
-    header ul{
-        display: none;
-    }
-
-    header .logo_arz{
-        width: 100px;
-        height: 40px;
-    }
-
-    header .material-symbols-outlined {
-        display: block;
-        cursor: pointer;
-        border: none;
-        background-color: transparent;
-    }
-
-    header.sticky .material-symbols-outlined {
-        color: #000000;
-    }
-
-    header.sticky{
-        padding: 10px 50px;
-    }
-
-    header.sticky ul{
-        display: none;
-    }
-
-    .banner{
-        height: 100vh;
-    }
-
-    .circle{
-        margin-top: 100px;
-        width: 500px;
-        height: 500px;
-        filter: blur(250px);
-    }
-
-    .main_grid{
-        width: 100%;
-        height: 100%;
-    }
-
-    .banner p{
-        font-size: 3em;
-    }
-
-    .competences{
-        padding-top: 200px;
-        padding-left: 50px;
-        padding-right: 50px;
-        padding-bottom: 500px;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 100px 1fr 1fr;
-    }
-
-    .competence p{
-        font-size: 1.3em;
-    }
-
-
-    .competences .competence_bottom{
-        margin-top: 100px;
-        grid-column: span 2;
-        grid-row: 3;
-    }
+header.sticky ul li a:hover{
+    color: #27cdff;
+    filter: drop-shadow(0 0 0.75rem #27cdff);
 }
 
-@media screen and (max-width: 440px){ /*smartphone*/
-    header .logo_arz{
-        color: #ffffff;
-        text-transform: uppercase;
-        cursor: pointer;
-        transition: 0.6s;
-        width: 70px;
-        height: 25px;
-    }
+.banner{
+    display: grid;
+    grid-row: 1fr;
+    grid-template-columns: minmax(500px,50%) ;
+    place-items: center;
+    align-items: center;
+    justify-content: center;
+    transition: 0.6s;
+}
+.circle1{
+    position: relative;
+    top: -400px;
+    margin-top: 150px;
+    width: 1000px;
+    height: 1000px;
+    border-radius: 50%;
+    background-color: #3935D2;
+    scale: 1.5;
+    filter: blur(600px);
+    opacity: 0.4;
+    grid-column: 1;
+    grid-row: 1;
+    transition: 0.6s;
+}
 
-    header .material-symbols-outlined {
-        color: #ffffff;
-        font-size: 40px;
-        transition: 0.6s;
-    }
+.circle2{
+    position: relative;
+    left: -600px;
+    top: 300px;
+    width: 1000px;
+    height: 1000px;
+    border-radius: 50%;
+    background-color: #DE8C37;
+    scale: 1.5;
+    filter: blur(600px);
+    opacity: 0.4;
+    grid-column: 1;
+    grid-row: 1;
+    transition: 0.6s;
+}
 
-    .banner .main_grid{
-        width: 350px ;
-        height: 400px;
-    }
+.circle3{
+    position: relative;
+    left: 600px;
+    top: 300px;
+    width: 1000px;
+    height: 1000px;
+    border-radius: 50%;
+    background-color: #EE0EF2;
+    scale: 1.5;
+    filter: blur(600px);
+    opacity: 0.4;
+    grid-column: 1;
+    grid-row: 1;
+    transition: 0.6s;
+}
 
-    .banner p{
-        font-size: 1.2em;
-    }
-
-    .circle{
-        margin-top: 50px;
-        width: 200px;
-        height: 200px;
-        filter: blur(200px);
-    }
-    .main_text_top{
-        margin-top: 100px;
-    }
-
-    .competences{
-        padding-top: 100px;
-        padding-left: 20px;
-        padding-right: 20px;
-        padding-bottom: 300px;
-        display: flex;
-        flex-direction: column;
-        
-    }
-
-    .competences .competence{
-        margin: 50px;
-        min-height: 325px;
-    }
-
-    .competences .competence h1{
-        font-size: 1em;
-        padding-top: 30px;
-        padding-left: 30px;
-        text-align: left;
-    }
-
-    .competence p{
-        padding-top: 25px;
-        padding-left: 35px;
-        color: #ffffff;
-        font-size: 0.8em;
-        width: 70%;
-        font-weight: 300;
-        text-align: left;
-    }
-
-    footer{
-        width: 100%;
-        height: 100px;
-        padding: 20px;
-        background-color: #f5f5f5;
-        display: grid;    
-        justify-content: center;
-        grid-template-columns: minmax(200px, 300px) minmax(200px, 300px);
-        grid-template-rows: 1fr 1fr 1fr;
-        transition: 0.6s;
-    }
+.main_grid{
+    margin-top: 100px;
+    width: 100%;
+    grid-column: 1;
+    grid-row: 1;
     
-    footer .logo_arz{
-        transition: 0.6s;
-        width: 70px;
-        height: 25px;
-        grid-column: span 2;
-        filter: brightness(0);
-        margin: 0 auto;
-        margin-bottom: 25px;
+}
+
+@keyframes breath{
+    0%{
+        transform: scale(1);
     }
-    
-    footer button {
-        font-family: 'Roboto Mono', monospace;
-        font-weight: 300;
-        background-color: #3935E8;
-        color: #ffffff;
-        font-size: 0.8em;
-        font-weight: 300;
-        padding: 5px 20px;
-        border: none;
-        border-radius: 50px;
-        cursor: pointer;
-        width: 100px;
-        height: 30px;
-        transition: 0.6s;
-        margin: 0 auto;
-        box-shadow: 0 0 25px #1bc8fd;
+    50%{
+        transform: scale(1.5);
     }
-    
-    footer .bottom_contact{
-        height: 200px;
-        font-size: 0.7em;
-        margin: 0 auto;
-    }
-    
-    footer .cc{
-        margin: 0 auto;
-        font-size: 0.7em;
-        grid-column: span 2;
+    100%{
+        transform: scale(1);
     }
 }
