--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ header.sticky ul li a:hover{
     grid-column: 1;
     grid-row: 1;
     transition: 0.6s;
+    display: none;
 }
 
 .circle2{
@@ -130,6 +131,7 @@ header.sticky ul li a:hover{
     grid-column: 1;
     grid-row: 1;
     transition: 0.6s;
+    display: none;
 }
 
 .circle3{
@@ -146,6 +148,7 @@ header.sticky ul li a:hover{
     grid-column: 1;
     grid-row: 1;
     transition: 0.6s;
+    display: none;
 }
 
 .main_grid{
@@ -153,8 +156,65 @@ header.sticky ul li a:hover{
     width: 100%;
     grid-column: 1;
     grid-row: 1;
-    
 }
+
+.banner p{
+    color: #ffffff;
+    font-size: 2.5vw;
+    font-weight: lighter;
+    text-align: center;
+    grid-area: 1/1;
+    transition: 0.6s;
+}
+.main_text_top{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 175px;
+    transition: 0.6s;
+}
+
+.main_text_top b{
+    font-weight: bold;
+    color: #27cdff;
+}
+
+.competences{
+    margin: 80px;
+    margin-top: 250px;
+    color: #ffffff;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100px 1fr;
+    gap: 40px;
+    align-items: center;
+    justify-content: center;
+    transition: 0.6s;
+}
+
+.competences h1{
+    color: #ffffff;
+    font-size: 3em;
+    font-weight:bold;
+    grid-column: span 3;
+    text-align: center;
+    transition: 0.6s;
+}
+
+.competences .competence{
+    background-color: #1E243A;
+    /*
+    height: 610px;
+    width: 80%;
+    */
+    border-radius: 50px;
+    margin: 0 auto;
+    /*
+    box-shadow: 0 0 1000px #242188;
+    */
+}
+
 
 @keyframes breath{
     0%{
