--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ header.sticky ul li a:hover{
     grid-template-rows: 100px 1fr;
     gap: 40px;
     align-items: center;
+    justify-items: center;
     justify-content: center;
     transition: 0.6s;
 }
@@ -216,9 +217,26 @@ header.sticky ul li a:hover{
     height: 610px;
     width: 80%;
     border-radius: 50px;
+    transition: 0.5s;
+    padding: 5%;
 }
 
+.competences .competence h1{
+    font-size: clamp(20px,2vw,35px);
+}
 
+.competences .competence p{
+    font-size: clamp(15px,1.2vw,35px);
+    font-weight: lighter;
+    margin-top: 20px;
+    line-height: 1.5;
+    transition: 0.5s;
+}
+
+.competences .competence:hover{
+    scale: 1.05;
+    transition: 0.5s;
+}
 
 @keyframes breath{
     0%{
