--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ footer button {
 }
 
 footer .bottom_contact{
-    height: 200px;
+    height: 130px;
     font-size: 1.5em;
     margin: 0 auto;
 }
@@ -303,7 +303,6 @@ footer button:hover{
 
 @media screen and (max-width: 768px){
     .circles{
-        top: -10px;
         scale: 0.25;
     }
 
@@ -344,17 +343,12 @@ footer button:hover{
     }
     
     .banner p, .main_text_top{
-        position: relative;
-        top: 50px;
         font-size: 5vw;
     }
     .main_text_top{
         margin-top: 100px;
     }
-    .main_grid{
-        margin-top: 200px;
-    }
-
+    
     .competences{
         margin: 20px;
         margin-top: 300px;
@@ -372,11 +366,12 @@ footer button:hover{
     }
 
     .competences .competence h1{
+        text-align: left;
         font-size: clamp(30px,1.5vw,35px);
     }
 
     .competences .competence p{
-        font-size: clamp(15px,0.8vw,35px);
+        font-size: clamp(20px,0.8vw,35px);
     }
 
     footer{
@@ -385,18 +380,20 @@ footer button:hover{
     }
 
     footer .logo_arz{
+        height: 25px;
+        width: 70px;
         margin-bottom: 20px;
     }
 
     footer button{
-        width: 150px;
-        height: 50px;
-        font-size: 1.2em;
+        width: 180px;
+        height: 80px;
+        font-size: 1.5em;
         margin: 20px 0;
     }
 
     footer .bottom_contact{
-        font-size: 1.2em;
+        font-size: 1em;
     }
 
     footer .cc{
