--- a/style2.css
+++ b/style2.css
@@ -180,8 +180,10 @@ textarea{
 }
 
 input::placeholder ,textarea::placeholder{
+    font-size: clamp(12px,1.3vw,35px); ;
     color: #ffffff;
     padding-left: 20px;
+    transition: 0.5s;
 }
 
 .contact_form button{
@@ -324,8 +326,52 @@ footer .cc{
         -webkit-backdrop-filter: blur(5px);
     }
 
+    .banner p{
+        width: 90%;
+    }
+
+    .contact_form{
+        padding-left: 5%;
+        padding-right: 5%;
+        grid-template-rows: 80px 80px 300px 60px;
+        font-size: 12px;
+    }
+
     header.sticky ul li a {
         color: #ffffff;
+    }
+
+    .banner{
+        height: 500px;
+
+    }
+
+    footer{
+        display: flex;
+        flex-direction: column;
+    }
+
+    footer .logo_arz{
+        height: 25px;
+        width: 70px;
+        margin-bottom: 20px;
+    }
+
+    footer button{
+        width: 180px;
+        height: 80px;
+        font-size: 1.5em;
+        margin: 20px 0;
+    }
+
+    footer .bottom_contact{
+        font-size: 1em;
+    }
+
+    footer .cc{
+        margin: 20px 0;
+        height: 50px;
+        text-align: center;
     }
 }
 
