--- a/style.css
+++ b/style.css
@@ -22,14 +22,18 @@ main{
 }
 
 header{
+    margin-top: 20px;
+    border-radius: 30px;
     position: fixed;
-    width: 100%;
+    width: 50vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
     transition: 0.6s;
     padding: 40px 100px;
     z-index: 3;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 header .logo_arz{
@@ -55,7 +59,7 @@ header ul li{
 header ul li a{
     text-decoration: none;
     color: #ffffff;
-    font-size: 1.5em;
+    font-size: clamp(15px,0.8vw,35px);
     font-weight: 400;
     letter-spacing: 3px;
 }
@@ -370,6 +374,7 @@ footer button:hover{
     }
 
     header{
+        width: 90vw;
         display: flex;
         justify-content: space-between;
         padding: 0 20px;
@@ -409,7 +414,7 @@ footer button:hover{
         top: -200px;
         left: 50%;
         transform: translateX(-50%);
-        width: 85%;
+        width: 85vw;
         height:70px;
         border: 1px solid rgb(92, 92, 92);
         border-radius: 10px;
@@ -418,6 +423,12 @@ footer button:hover{
         padding: 5px;
         transition: 0.6s ease-in-out;
         -webkit-backdrop-filter: blur(5px);
+    }
+
+    header .sidebar li a {
+        letter-spacing: 0px;
+        font-size: 3vw;
+        transition: 0.6s;
     }
 
     header.sticky ul li a {
