--- a/style.css
+++ b/style.css
@@ -26,11 +26,12 @@ header{
     border-radius: 30px;
     position: fixed;
     width: 50vw;
+    height: 80px;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     transition: 0.6s;
-    padding: 40px 100px;
     z-index: 3;
     left: 50%;
     transform: translateX(-50%);
@@ -80,7 +81,6 @@ header ul li a:hover{
 
 header.sticky{
     background-color: #f5f5f5;
-    padding: 20px 100px;
 }
 
 header.sticky .logo_arz{
