--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ header{
 header .logo_arz{
     color: #ffffff;
     cursor: pointer;
-    width: 140px;
-    height: 50px;
+    width: 5vw;
+    height: 1.7vw;
     transition: 0.6s;
 }
 
@@ -235,7 +235,7 @@ header.sticky ul li a:hover{
 .banner .btn_cont p {
     margin-left: 30px;
     color: #ffffff;
-    font-size: 0.7vw;
+    font-size: 1vw;
     font-weight: lighter;
     text-align: left;
     width: 45%;
