--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ header{
 header .logo_arz{
     color: #ffffff;
     cursor: pointer;
-    width: 5vw;
-    height: 1.7vw;
+    width: clamp(100px,7vw,140px);
+    height:clamp(35px,2.5vw,50px);
     transition: 0.6s;
 }
 
