--- a/style2.css
+++ b/style2.css
@@ -22,20 +22,27 @@ main{
 }
 
 header{
+    filter: drop-shadow(0 30px 3rem rgba(0, 0, 0, 0.7));
+    margin-top: 20px;
+    border-radius: 20px;
     position: fixed;
-    width: 100%;
+    width: 50vw;
+    height: 70px;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     transition: 0.6s;
     z-index: 3;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 header .logo_arz{
     color: #ffffff;
     cursor: pointer;
-    width: 140px;
-    height: 50px;
+    width: clamp(100px,7vw,140px);
+    height:clamp(35px,2.5vw,50px);
     transition: 0.6s;
 }
 
@@ -54,7 +61,7 @@ header ul li{
 header ul li a{
     text-decoration: none;
     color: #ffffff;
-    font-size: 1.5em;
+    font-size: clamp(15px,0.8vw,35px);
     font-weight: 400;
     letter-spacing: 3px;
 }
@@ -74,7 +81,7 @@ header ul li a:hover{
 }
 
 header.sticky{
-    background-color: #f5f5f5; 
+    background-color: #f5f5f5;
 }
 
 header.sticky .logo_arz{
@@ -151,7 +158,7 @@ input{
     border: 4px solid #1F2B51;
     border-radius: 10px;
     padding: 10px;
-    font-size: 1.2em;
+    font-size: 1.3em;
 }
 
 #subject {
@@ -159,7 +166,7 @@ input{
     grid-row: 2;
     border-radius: 10px;
     padding: 10px;
-    font-size: 1.2em;
+    font-size: 1.3em;
 }
 
 textarea{
@@ -174,11 +181,11 @@ textarea{
     grid-row: 3;
     border-radius: 10px;
     padding: 20px;
-    font-size: 1.2em;
+    font-size: 1.3em;
 }
 
 input::placeholder ,textarea::placeholder{
-    font-size: clamp(12px,1.3vw,35px); ;
+    font-size: clamp(12px,1.3vw,20px); ;
     color: #ffffff;
     padding-left: 20px;
     transition: 0.5s;
@@ -274,6 +281,8 @@ footer .cc{
     }
 
     header{
+        width: 90vw;
+        height: 50px;
         display: flex;
         justify-content: space-between;
         padding: 0 20px;
@@ -313,7 +322,7 @@ footer .cc{
         top: -200px;
         left: 50%;
         transform: translateX(-50%);
-        width: 85%;
+        width: 85vw;
         height:70px;
         border: 1px solid rgb(92, 92, 92);
         border-radius: 10px;
@@ -322,6 +331,12 @@ footer .cc{
         padding: 5px;
         transition: 0.6s ease-in-out;
         -webkit-backdrop-filter: blur(5px);
+    }
+
+    header .sidebar li a {
+        letter-spacing: 0px;
+        font-size: 3vw;
+        transition: 0.6s;
     }
 
     .banner p{
