--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ body{
     overflow-x: hidden;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 main{
     width: 100%;
     height: 100%;
@@ -250,6 +254,7 @@ header.sticky ul li a:hover{
 
 .competences{
     margin: 80px;
+    padding-top: 200px;
     margin-top: 250px;
     color: #ffffff;
     display: grid;
