--- a/style1.css
+++ b/style1.css
@@ -6,39 +6,50 @@
     box-sizing: border-box;
 }
 
+/* desktop */
+
 body{
     font-family: 'Roboto Mono', monospace;
-    background-color: #f5f5f5;
+    background-color: #04091A;
+    overflow-x: hidden;
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 main{
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #04091A;
+}
+
+.sidebar{
+    display: none;
 }
 
 header{
+    filter: drop-shadow(0 30px 3rem rgba(0, 0, 0, 0.7));
+    margin-top: 20px;
+    border-radius: 20px;
     position: fixed;
-    width: 100%;
+    width: 50vw;
+    height: 70px;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     transition: 0.6s;
-    padding: 40px 100px;
-    z-index: 10000000;
+    z-index: 3;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 header .logo_arz{
     color: #ffffff;
-    text-transform: uppercase;
     cursor: pointer;
+    width: clamp(100px,7vw,140px);
+    height:clamp(35px,2.5vw,50px);
     transition: 0.6s;
-    width: 140px;
-    height: 50px;
 }
 
 header ul{
@@ -56,14 +67,56 @@ header ul li{
 header ul li a{
     text-decoration: none;
     color: #ffffff;
-    font-size: 1.5em;
+    font-size: clamp(15px,0.8vw,35px);
     font-weight: 400;
     letter-spacing: 3px;
-    transition: 0.6s;
 }
+
+header .material-symbols-outlined{
+    color: #ffffff;
+    font-size: 60px;
+    transition: 0.6s;
+    display: none;
+}
+
 
 header ul li a:hover{
     color: #27cdff;
+    transition: 0.5s;
+    filter: drop-shadow(0 0 0.75rem #27cdff);
+}
+
+header.sticky{
+    background-color: #f5f5f5;
+}
+
+header.sticky .logo_arz{
+    filter: brightness(0);
+}
+
+header.sticky ul li a{
+    color: #000000;
+}
+
+header.sticky .material-symbols-outlined{
+    color: #000000;
+}
+
+header.sticky ul li a:hover{
+    color: #27cdff;
+    filter: drop-shadow(0 0 0.75rem #27cdff);
+}
+
+header.sticky{
+    background-color: #f5f5f5;
+}
+
+header.sticky .logo_arz{
+    filter: brightness(0);
+}
+
+header.sticky ul li a{
+    color: #000000;
 }
 
 .material-symbols-outlined {
@@ -74,86 +127,62 @@ header ul li a:hover{
 }
 
 .banner{
-    display: grid;
-    grid-row: 1fr 1fr 1fr;
-    grid-template-columns: minmax(500px,1000px) minmax(500px,1000px);
-    margin-top: 200px;
-    margin-bottom: 200px;
-    place-items: center;
-    align-items: center;
+    display: flex;
     justify-content: center;
-    background-size: cover;
-    height: 100%;
-    width: 100%;
-}
-
-.circle1, .circle2, .circle3{
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    background-color: #3935D2;
-    filter: blur(200px);
-    grid-row: 1;
-    grid-column: 1;
-}
-
-.circle2{
-    grid-row: 2;
-    grid-column: 2;
-}
-
-.circle3{
-    grid-row: 3;
-    grid-column: 1;
+    align-items: center;
+    height: 100vh;
+    transition: 0.6s;
 }
 
 .banner p{
     color: #ffffff;
-    width: 560px;
-    font-size: 32px;
+    width: 50%;
+    font-size: 1vw;
+    font-weight: lighter;
     text-align: center;
+    grid-area: 1/1;
+    transition: 0.6s;
+    z-index: 2;
+    filter: drop-shadow(0 0 2.75rem #27cdff);
+}
+
+.banner b{
+    text-decoration: underline;
+    font-size: 1.2vw;
+    color: #27cdff;
+    font-weight: 600;
+}
+
+.signature{
+    position: relative;
+    top: -500px;
+    left: 300px;
+    font-size: 0.7vw;
+    color: #ffffff;
+    font-weight: 300;
+    text-align: center;
+    margin-top: 20px;
     transition: 0.6s;
 }
 
-.banner h1{
-    color: #ffffff;
-    width: 560px;
-    height: 100%;
-    font-size: 36px;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.about1{
-    grid-row: 1;
-    grid-column: 1;
-}
-
-.about2{
-    grid-column: 2;
-    grid-row: 2;
-}
-
-.about3{
-    grid-row: 3;
-    grid-column: 1;
-}
-
-.banner img{
-    width: 500px;
-    grid-column: 1;
-    grid-row: 2;
+.signature img{
+    width: 80px;
+    height: 30px;
+    margin-top: 20px;
+    transition: 0.6s;
+    filter: drop-shadow(0 0 0.80rem #ffffff);
 }
 
 footer{
-    width: 100%;
-    height: 100px;
     padding: 20px;
-    background-color: #f5f5f5;
-    display: grid;    
-    justify-content: center;
+    display: grid;
     grid-template-columns: minmax(400px, 600px) minmax(400px, 600px);
     grid-template-rows: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
+    color: #000000;
 }
 
 footer .logo_arz{
@@ -185,7 +214,7 @@ footer button {
 }
 
 footer .bottom_contact{
-    height: 400px;
+    height: 130px;
     font-size: 1.5em;
     margin: 0 auto;
 }
@@ -197,72 +226,124 @@ footer .cc{
 
 footer button:hover{
     background-color: #27cdff;
+    animation: breath 1s infinite ease-in-out;
 }
 
+@media screen and (max-width: 768px){
+    html, body {
+        overflow-x: hidden;
+      }
+    body {
+        position: relative
+    }
 
-header.sticky{
-    background-color: #f5f5f5;
-    padding: 20px 100px;
-}
-
-header.sticky .logo_arz{
-    filter: brightness(0);
-}
-
-header.sticky ul li a{
-    color: #000000;
-}
-
-@media screen and (max-width: 2000px){
     header{
-        padding: 30px 100px;
+        width: 90vw;
+        height: 50px;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 20px;
     }
 
     header.sticky{
-        padding: 20px 100px;
+        background-color: #f5f5f5;
+        padding: 0px 20px;
     }
 
     header .logo_arz{
-        width: 120px;
-        height: 40px;
-    }
-
-    header ul li a{
-        font-size: 1.3em;
-    }
-
-    header ul li{
-        margin: 0 5px;
+        width: 70px;
+        height: 25px;
     }
 
     header ul{
-        gap: 10px;
+        display: none;
+    }
+
+    header .material-symbols-outlined{
+        display: block;
+        cursor: pointer;
+        scale: 0.8;
+        color: rgb(255, 255, 255);
+        background-color: transparent;
+        border: none;
+    }
+
+    .sidebar{
+        gap: 5px;
+        z-index: 3;
+        margin-top: 15%;
+        display: flex;
+        flex-direction: row;
+        position: fixed;
+        align-items: center;
+        top: -200px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 85vw;
+        height:70px;
+        border: 1px solid rgb(92, 92, 92);
+        border-radius: 10px;
+        backdrop-filter: blur(10px);
+        font-size: 5px;
+        padding: 5px;
+        transition: 0.6s ease-in-out;
+        -webkit-backdrop-filter: blur(5px);
+    }
+
+    .signature{
+        display: none;
+    }
+
+    header .sidebar li a {
+        letter-spacing: 0px;
+        font-size: 3vw;
+        transition: 0.6s;
+    }
+
+    header.sticky ul li a {
+        color: #ffffff;
     }
 
     .banner p{
-        font-size: 25px;
+        font-size: 4vw;
+        width: 80%;
+    }
+
+    .banner b{
+        font-size: 5vw;
+    }
+
+    footer{
+        display: flex;
+        flex-direction: column;
     }
 
     footer .logo_arz{
-        width: 120px;
-        height: 40px;
+        height: 25px;
+        width: 70px;
+        margin-bottom: 20px;
     }
 
     footer button{
-        font-size: 1.3em;
         width: 180px;
-        height: 50px;
+        height: 80px;
+        font-size: 1.5em;
+        margin: 20px 0;
     }
 
     footer .bottom_contact{
-        font-size: 1.3em;
+        font-size: 1em;
     }
 
     footer .cc{
-        font-size: 1.3em;
+        margin: 20px 0;
+        height: 50px;
+        text-align: center;
     }
 }
+
 
 @keyframes typing {
     from { width: 0 }
 }
+
