--- a/style.css
+++ b/style.css
@@ -381,6 +381,7 @@ footer button:hover{
     }
 
     header{
+        z-index: 4;
         width: 90vw;
         height: 50px;
         display: flex;
@@ -413,7 +414,7 @@ footer button:hover{
 
     .sidebar{
         gap: 5px;
-        z-index: 1;
+        z-index: 3;
         margin-top: 15%;
         display: flex;
         flex-direction: row;
@@ -427,16 +428,31 @@ footer button:hover{
         border: 1px solid rgb(92, 92, 92);
         border-radius: 10px;
         backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
         font-size: 5px;
         padding: 5px;
         transition: 0.6s ease-in-out;
-        -webkit-backdrop-filter: blur(5px);
     }
 
-    header .sidebar li a {
+    .sidebar{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+    
+    .sidebar li{
+        list-style: none;
+    }
+
+    .sidebar li a {
         letter-spacing: 0px;
-        font-size: 3vw;
+        font-size: 2.5vw;
         transition: 0.6s;
+        text-decoration: none;
+        color: #ffffff;
+        font-weight: 400;
+        letter-spacing: 3px;
     }
 
     header.sticky ul li a {
