--- a/style1.css
+++ b/style1.css
@@ -238,6 +238,7 @@ footer button:hover{
     }
 
     header{
+        z-index: 4;
         width: 90vw;
         height: 50px;
         display: flex;
@@ -284,20 +285,29 @@ footer button:hover{
         border: 1px solid rgb(92, 92, 92);
         border-radius: 10px;
         backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
         font-size: 5px;
-        padding: 5px;
         transition: 0.6s ease-in-out;
-        -webkit-backdrop-filter: blur(5px);
     }
 
-    .signature{
-        display: none;
+    .sidebar{
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+    
+    .sidebar li{
+        list-style: none;
     }
 
-    header .sidebar li a {
+    .sidebar li a {
         letter-spacing: 0px;
-        font-size: 3vw;
+        font-size: 2.5vw;
         transition: 0.6s;
+        text-decoration: none;
+        color: #ffffff;
+        font-weight: 400;
+        letter-spacing: 3px;
     }
 
     header.sticky ul li a {
