--- a/style2.css
+++ b/style2.css
@@ -155,7 +155,7 @@ input{
     color: #ffffff;
     font-family: 'Roboto Mono', monospace;
     background-color: #04091A;
-    border: 4px solid #1F2B51;
+    border: 2px solid #1F2B51;
     border-radius: 10px;
     padding: 10px;
     font-size: 1.3em;
@@ -173,7 +173,7 @@ textarea{
     outline: none;
     color: #ffffff;
     background-color: #04091A;
-    border: 4px solid #1F2B51;
+    border: 2px solid #1F2B51;
     font-family: 'Roboto Mono', monospace;
     height: 100%;
     width: 100%;
@@ -200,7 +200,7 @@ input::placeholder ,textarea::placeholder{
     grid-row: 4;
     color: #ffffff;
     background-color: #04091A;
-    border: 4px solid #1F2B51;
+    border: 2px solid #1F2B51;
     border-radius: 10px;
     transition: 0.6s;
 }
@@ -281,6 +281,7 @@ footer .cc{
     }
 
     header{
+        z-index: 4;
         width: 90vw;
         height: 50px;
         display: flex;
@@ -313,7 +314,7 @@ footer .cc{
 
     .sidebar{
         gap: 5px;
-        z-index: 1;
+        z-index: 3;
         margin-top: 15%;
         display: flex;
         flex-direction: row;
@@ -327,16 +328,29 @@ footer .cc{
         border: 1px solid rgb(92, 92, 92);
         border-radius: 10px;
         backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
         font-size: 5px;
-        padding: 5px;
         transition: 0.6s ease-in-out;
-        -webkit-backdrop-filter: blur(5px);
     }
 
-    header .sidebar li a {
+    .sidebar{
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+    
+    .sidebar li{
+        list-style: none;
+    }
+
+    .sidebar li a {
         letter-spacing: 0px;
-        font-size: 3vw;
+        font-size: 2.5vw;
         transition: 0.6s;
+        text-decoration: none;
+        color: #ffffff;
+        font-weight: 400;
+        letter-spacing: 3px;
     }
 
     .banner p{
